# davinci-stark

./: .gitignore  Cargo.toml  Makefile  OPTIMIZATIONS.md  README.md  build.rs  gen_constants.rs
.github/workflows/: deploy.yml
docs/plans/: 2026-03-07-circuit-security-remediation.md  2026-03-07-plonky3-port-ballot-webapp.md  2026-03-08-ballot-proof-parity-final.md  2026-03-08-circom-parity-audit.md  2026-03-09-browser-trace-optimization.md  2026-03-10-browser-performance-plan.md  2026-03-13-zisk-016-poseidon-upgrade.md  2026-03-13-zkvm-batch-scaling.md
examples/: debug_prove.rs  degree_check.rs
src/: air.rs  columns.rs  config.rs  ecgfp5_ops.rs  elgamal.rs  gfp5.rs  lib.rs  poseidon2.rs  trace.rs  wasm.rs  zisk_poseidon2.rs
tests/: ballot_e2e.rs  ec_test.rs  fibonacci_smoke.rs  gfp5_test.rs  poseidon2_test.rs  trace_layout_test.rs
webapp/: index.html  package-lock.json  package.json  vite.config.js
webapp/src/: ballot_config.js  build_info.js  main.js  proof_ui.js  worker.js
webapp/tests/: ballot_config.test.mjs  proof_ui.test.mjs
