[package]
name = "davinci-stark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
parallel = ["p3-miden-prover/parallel", "p3-maybe-rayon/parallel"]

[dependencies]
# Plonky3 STARK (pure Rust, no_std compatible, WASM-friendly)
p3-miden-prover = { version = "0.4.2", default-features = false }
p3-miden-air = { version = "0.4.2", default-features = false }
p3-miden-fri = "0.4.2"
p3-goldilocks = { version = "0.4.2", default-features = false }
p3-field = { version = "0.4.2", default-features = false }
p3-matrix = { version = "0.4.2", default-features = false }
p3-challenger = { version = "0.4.2", default-features = false }
p3-symmetric = { version = "0.4.2", default-features = false }
p3-merkle-tree = { version = "0.4.2", default-features = false }
p3-commit = { version = "0.4.2", default-features = false }
p3-dft = { version = "0.4.2", default-features = false }
p3-poseidon2 = { version = "0.4.2", default-features = false }
p3-maybe-rayon = { version = "0.4.2", default-features = false }
p3-util = { version = "0.4.2", default-features = false }

# ecgfp5 curve (for trace generation / ElGamal)
ecgfp5 = { path = "../ecgfp5/rust" }

# Serialization
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
postcard = { version = "1.0", features = ["alloc"], default-features = false }

# Random number generation (needed for Poseidon2 parameter initialization)
rand = { version = "0.9", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
rand = "0.9"

[profile.release]
opt-level = 2
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
