[package]
name = "davinci-stark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
parallel = ["p3-uni-stark/parallel", "p3-maybe-rayon/parallel"]

[dependencies]
# Plonky3 STARK (pure Rust, no_std compatible, WASM-friendly)
p3-air = { version = "0.4.2", default-features = false }
p3-uni-stark = { version = "0.4.2", default-features = false }
p3-fri = "0.4.2"
p3-goldilocks = { version = "0.4.2", default-features = false }
p3-field = { version = "0.4.2", default-features = false }
p3-matrix = { version = "0.4.2", default-features = false }
p3-challenger = { version = "0.4.2", default-features = false }
p3-symmetric = { version = "0.4.2", default-features = false }
p3-merkle-tree = { version = "0.4.2", default-features = false }
p3-commit = { version = "0.4.2", default-features = false }
p3-dft = { version = "0.4.2", default-features = false }
p3-poseidon2 = { version = "0.4.2", default-features = false }
p3-maybe-rayon = { version = "0.4.2", default-features = false }
p3-util = { version = "0.4.2", default-features = false }

# ecgfp5 curve (for trace generation / ElGamal)
ecgfp5 = { path = "vendor/ecgfp5/rust" }

# Serialization
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
postcard = { version = "1.0", features = ["alloc"], default-features = false }

# Random number generation (needed for Poseidon2 parameter initialization)
rand = { version = "0.9", default-features = false }

# OS entropy (used for blinding RNG in HidingFriPcs)
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
rand = "0.9"

[patch.crates-io]
# Patch p3-challenger to fix PoW grinding on wasm32:
# Original code truncates F::ORDER_U64 via `as usize` (32-bit on wasm32 → 1).
# Our patch does the division in u64 first and clamps to usize::MAX.
p3-challenger = { path = "vendor/p3-challenger" }

[profile.release]
opt-level = 3
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
