[package]
name = "davinci-stark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_vendor, values("zisk"))'] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []
parallel = ["p3-uni-stark/parallel", "p3-maybe-rayon/parallel"]

[dependencies]
# Plonky3 STARK (pure Rust, no_std compatible, WASM-friendly)
# Pinned to the same rev as Plonky3-recursion for recursive proof compatibility.
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }
p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "00188f0763d5eb86c5cc1d1b7c5a56cbab356593", default-features = false }

# ecgfp5 curve (for trace generation / ElGamal)
ecgfp5 = { path = "vendor/ecgfp5/rust" }

# Serialization
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive", "alloc"], default-features = false }
postcard = { version = "1.0", features = ["alloc"], default-features = false }

# Random number generation (needed for Poseidon2 parameter initialization)
rand = { version = "0.10", default-features = false }

# OS entropy (used for blinding RNG in HidingFriPcs)
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

[target.'cfg(all(target_os = "zkvm", target_vendor = "zisk"))'.dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.16.0" }


[dev-dependencies]
rand = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
